# movie-recommender

./: .gitignore  ARCHITECTURE.md  README.md  app.py  config.py  main.py  recommender.ipynb  recommender.py  requirements.txt  ui.py
app/: main.py
configs/: data.yaml  model.yaml  model_mf_baseline.yaml  reranker.yaml  retrieval.yaml
cpp/: CMakeLists.txt  build.sh
cpp/include/: hnsw_index.hpp  memory_pool.hpp  retrieval_engine.hpp  simd_dot.hpp
cpp/src/: pybind_module.cpp  retrieval_engine.cpp
frontend/: README.md  package-lock.json  package.json
frontend/fixtures/: eval.json  movies.json  projection.json  recommendations.json  users.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: command-palette.tsx  shell.tsx  ui.tsx
frontend/src/lib/: api.ts  colors.ts  format.ts  store.ts  types.ts
outputs/: eval_cold_start.json  eval_cold_start_v2.json  eval_loo.json  eval_loo_epoch4.json  eval_loo_history.json  eval_loo_masked.json  eval_loo_mf.json  eval_loo_v2.json  eval_loo_w0.json  eval_reranker_ab.json  eval_timesplit.json  eval_timesplit_v2.json
scripts/: build_index.py  capture_fixtures.py  evaluate.py  evaluate_cold_start.py  evaluate_mf.py  evaluate_reranker.py  evaluate_timesplit.py  generate_cold_start.py  infer.py  train_all.py
src/data/: __init__.py  cold_start.py  csv_to_parquet.py  dataset.py  splits.py
src/models/: __init__.py  matrix_factorization.py  reranker.py  trainer.py  two_tower.py
src/models/reranker_old/: __init__.py
tests/: test_data_pipeline.py  test_models.py  test_reranker.py
(+7 files in other folders)
